fix(Spotify) : resolve access settings bug

--- a/webPage/main.css
+++ b/webPage/main.css
@@ -10,6 +10,10 @@
     height: 100px;
 }
 
+.spotify-last-iframe iframe {
+    height: 100px;
+}
+
 .fade-in {
     animation: fadeIn 3s;
     -webkit-animation: fadeIn 3s;
